fix: #40 wrap login status within a span

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,3 +50,11 @@
   /* font-weight: bold; */
   font-size: 2em;
 }
+
+.auth-status {
+  background-color: #f8f9fa;
+  /* border: 1px solid #6c757d; */
+  border-radius: 25px;
+  color: black;
+  padding: 0.5em;
+}
